# app/Http/Requests/Service/ErrandTaskUpdateFormRequest.php
@@ -1,40 +1,0 @@
-<?php
-
-namespace App\Http\Requests\Service;
-
-use Illuminate\Foundation\Http\FormRequest;
-
-/**
-/**
- * @OA\Schema(
- *      title="Errand Task Update Form Request Fields",
- *      description="Errand Task Update request body data",
- *      type="object",
- *      required={"first_name"}
- * )
- */
-
-class ErrandTaskUpdateFormRequest extends FormRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
-    public function rules()
-    {
-        return [
-            //
-        ];
-    }
-}
